# beekeeper-studio

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  package.json  pnpm-lock.yaml
apps/studio/: BUILD.bazel
apps/studio/src/: BUILD.bazel
apps/studio/src-commercial/: BUILD.bazel
